# realtime-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: async_test.rs  broadcast.rs  broadcast_async.rs  broadcast_sync.rs  cdc.rs  chatroom.rs  encode_decode.rs  postgres_change.rs  presence.rs  test.rs
src/: constants.rs  lib.rs  realtime_channel.rs  realtime_client.rs  realtime_presence.rs
src/message/: cdc_message_filter.rs  message_filter.rs  mod.rs  payload.rs  postgres_change_filter.rs  presence.rs  realtime_message.rs
src/sync/: mod.rs  realtime_channel.rs  realtime_client.rs  realtime_presence.rs
supabase/: config.toml
