[package]
name = "realtime-rs"
version = "0.1.0"
edition = "2021"
authors = ["sam edelsten"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
