[package]
name = "realtime-rs"
version = "0.1.0"
edition = "2021"
authors = ["sam edelsten"]
license = "MIT OR Apache-2.0"

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
native-tls = "0.2.11"
regex = "1.10.3"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt", "macros", "io-std", "time"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }

[dev-dependencies]
go_true = {version = "0.1.1"}
